Amazon S3 Extended Über Edition
==========
v0.0.3:
==========
Main:
- Added keep image ratio.
  You can enable this by setting the keepRatio property to "Yes".
- Added keepRatio property. (Default: "Yes")
- Added custom caching for the file browser.
- Images with spaces in their name should now be properly displayed in the file browser.

Lexicon:
- Added English translation for keepRatio description.


v0.0.2:
==========
Main:
- Added resize on upload for PNG, JPG, JPEG, GIF filetypes.
  You can enable this by setting the downSize property to "Yes".

- Added sanitize file on upload. (eg. "Foo Bar.PNG" => "foo-bar.png")
  You can enable this by setting the sanitizeFile property to "Yes".

- downSize property now works as intended.

- Added downSizeWidth property (in pixels). (Default: "300")
- Added downSizeHeight property (in pixels). (Default: "300")
- Added downSizeQuality property (in percents). (Default: "90")
- Added sanitizeFiles property. (Default: "Yes")

Lexicon:
- Added English translation for downSizeWidth description.
- Added English translation for downSizeHeight description.
- Added English translation for downSizeQuality description.
- Added Englihs translation for sanitizeFiles description.
- Added English translation for notImplemented error.


v0.0.1:
==========
Main:
- Added basic Amazon S3 source type
- Added downSize property. (Default: "No") Not working

Lexicon:
- Added English translation for package name.
- Added English translation for package description.
- Added English translation for url description.
- Added English translation for bucket description.
- Added English translation for key description.
- Added English translation for secret_key description.
- Added English translation for imageExtension description.
- Added English translation for thumbnailType description.
- Added English translation for thumbnailQuality description.
- Added English translation for skipFiles description.