@@ -6,11 +6,17 @@ Main:
 - Added keep image ratio.
   You can enable this by setting the keepRatio property to "Yes".
 - Added keepRatio property. (Default: "Yes")
+- Added cacheToS3 property.  (Default: "Yes")
+- Added s3CacheFolder property. (Default: "_cache")
+- Added hideS3Cache property. (Default: "Yes")
 - Added custom caching for the file browser.
 - Images with spaces in their name should now be properly displayed in the file browser.
 
 Lexicon:
 - Added English translation for keepRatio description.
+- Added English translation for cacheToS3 description.
+- Added English translation for s3CacheFolder description.
+- Added English translation for hideS3Cache description.
 
 
 v0.0.2:
